[FIX] Contrast problem.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@25919 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/jqui/options/trontastic.css
+++ b/styles/jqui/options/trontastic.css
@@ -147,6 +147,10 @@ h1.pagetitle a:hover {
 	color: #f3fce8;
 }
 
+.box legend {
+	color: #f3fce8;	
+}
+
 .cbox a,
 .box a {
 	 color: #ffffff;
